// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatBubble renders assistant message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      false,
      {
        "alignItems": "flex-start",
        "marginBottom": 4,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 14,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 14,
          "paddingVertical": 10,
        },
        false,
        {
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderLeftColor": "rgba(212, 164, 74, 0.60)",
          "borderLeftWidth": 2,
          "borderRadius": 0,
          "marginLeft": -4,
          "marginTop": -6,
          "maxWidth": "95%",
          "paddingLeft": 14,
        },
      ]
    }
  >
    <View
      style={
        {
          "paddingVertical": 2,
        }
      }
    >
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#0E1116",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 22.4,
              },
              {
                "color": "#2D2D2D",
                "fontSize": 15,
                "letterSpacing": -0.2,
                "lineHeight": 21,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#0E1116",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 22.4,
                },
                {
                  "color": "#2D2D2D",
                  "letterSpacing": -0.2,
                },
              ]
            }
          >
            Hi there! This is an assistant response with some longer text to test the bubble styling.
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ChatBubble renders system message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 14,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 14,
          "paddingVertical": 10,
        },
        false,
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E1116",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 22.4,
          },
          [
            {
              "fontSize": 15,
              "fontWeight": "400",
              "letterSpacing": -0.2,
              "lineHeight": 21,
            },
            false,
          ],
        ]
      }
    >
      System notification message
    </Text>
  </View>
</View>
`;

exports[`ChatBubble renders user message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      {
        "alignItems": "flex-end",
        "marginBottom": 16,
      },
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 14,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 14,
          "paddingVertical": 10,
        },
        {
          "alignSelf": "flex-end",
          "backgroundColor": "rgba(92, 107, 90, 0.87)",
          "borderColor": "rgba(255, 255, 255, 0.05)",
          "borderRadius": 14,
          "borderWidth": 0.5,
          "elevation": 1,
          "maxWidth": "85%",
          "paddingHorizontal": 14,
          "paddingVertical": 10,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 3,
        },
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E1116",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 22.4,
          },
          [
            {
              "fontSize": 15,
              "fontWeight": "400",
              "letterSpacing": -0.2,
              "lineHeight": 21,
            },
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "400",
              "letterSpacing": -0.2,
              "lineHeight": 21,
            },
          ],
        ]
      }
    >
      Hello, this is a user message!
    </Text>
  </View>
</View>
`;
